Fixed nav z-index on client read main note textarea [SLE-161][SLE-164]

--- a/public/assets/general/css/side-navbar.css
+++ b/public/assets/general/css/side-navbar.css
@@ -213,6 +213,8 @@
     }
     #nav-container {
         position: fixed;
+        /*The z-index matters most here as its the most parent context of the menu*/
+        z-index: 999;
     }
 }
 
